# Ankbot

./: README.md  Readme.md  command.txt
robot/ankbot/ankbot_bringup/: CMakeLists.txt
robot/ankbot/ankbot_bringup/launch/: ankbot_remote.launch
robot/ankbot/ankbot_bringup/launch/include/: description.launch.xml
robot/ankbot/ankbot_description/: CMakeLists.txt  package.xml
robot/ankbot/ankbot_description/urdf/: ankbot.gazebo.xacro  ankbot.urdf.xacro
robot/ankbot/ankbot_navigation/: CMakeLists.txt
robot/ankbot/ankbot_navigation/launch/: amcl.launch  ankbot_navigation.launch  move_base test.launch
robot/ankbot/ankbot_navigation/maps/: map.pgm  map.yaml
robot/ankbot/ankbot_navigation/param_test/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
robot/ankbot/ankbot_navigation/param_test/test0304/: DWAPlannerROS.yaml  dwa_planer.yaml  global_costmap.yaml  global_costmap_inflation_layer.yaml  local_costmap.yaml
robot/ankbot/ankbot_navigation/rviz/: ankbot_navigation.rviz
robot/ankbot/ankbot_slam/: CMakeLists.txt  package.xml
robot/ankbot/ankbot_slam/launch/: ankbot_gmapping.launch  ankbot_slam.launch
robot/ankbot/ankbot_slam/rviz/: ankbot_gmapping.rviz
robot/ankbot/ankbot_teleop/: CMakeLists.txt
robot/ankbot/ankbot_teleop/nodes/: ankbot_teleop_key
robot/ankbot_simulations/ankbot_gazebo/launch/: ankbot_world.launch
robot/remote_web/: CMakeLists.txt  package.xml  readme.md  setup.py
robot/remote_web/launch/: remote_web.launch
robot/remote_web/nodes/: get_data  remote_web  remote_webb
robot/web_interface/: CMakeLists.txt  package.xml  setup.py
robot/web_interface/gui/: index.html  scripts.js
robot/web_interface/launch/: web_interface.launch
web_application/: README.md  ankbot_bringup.launch  ankbot_navigation.launch  ankbot_slam.launch  app.py  test.py
web_application/static/: database.db  test.pgm  test.yaml
web_application/static/css/: main.css  w3.css
web_application/static/js/: index.js  mapping.js  nav2d.js  navigation.js
web_application/templates/: index.html  layout.html  mapping.html  navigation.html
